--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "testing",
-  "private": true,
-  "version": "0.0.0",
+  "name": "Portfolio",
+  "private": false,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
